Salesforce/force-app/main/default/objects/WebServiceConfiguration__mdt/WebServiceConfiguration__mdt.object-meta.xml
<CustomObject>
    <label>WebServiceConfiguration</label>
    <pluralLabel>WebServicesConfiguration</pluralLabel>
</CustomObject>