Salesforce/force-app/main/default/objects/WebServiceConfiguration__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Integração Ativa</label>
    <type>Checkbox</type>
</CustomField>