Salesforce/force-app/main/default/objects/WebServiceConfiguration__mdt/fields/Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Endpoint__c</fullName>
    <label>Endpoint</label>
    <type>TextArea</type>
</CustomField>